third_party/move/move-compiler/tests/move_check/typing/constraints_not_satisfied_lvalues_pack_type_args.exp
error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/typing/constraints_not_satisfied_lvalues_pack_type_args.move:8:15
  │
2 │     struct CupC<phantom T: copy> {}
  │                            ---- 'copy' constraint declared here
3 │     struct R {}
  │            - To satisfy the constraint, the 'copy' ability would need to be added here
  ·
8 │         let B<CupC<R>> {} = abort 0;
  │               ^^^^^^^
  │               │    │
  │               │    The type '0x8675309::M::R' does not have the ability 'copy'
  │               'copy' constraint not satisifed

warning[W09005]: dead or unreachable code
  ┌─ tests/move_check/typing/constraints_not_satisfied_lvalues_pack_type_args.move:8:29
  │
8 │         let B<CupC<R>> {} = abort 0;
  │                             ^^^^^^^ Invalid use of a divergent expression. The code following the evaluation of this expression will be dead and should be removed.

error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/typing/constraints_not_satisfied_lvalues_pack_type_args.move:9:11
  │
2 │     struct CupC<phantom T: copy> {}
  │                            ---- 'copy' constraint declared here
3 │     struct R {}
  │            - To satisfy the constraint, the 'copy' ability would need to be added here
  ·
9 │         B<CupC<R>> {} = abort 0;
  │           ^^^^^^^
  │           │    │
  │           │    The type '0x8675309::M::R' does not have the ability 'copy'
  │           'copy' constraint not satisifed

warning[W09005]: dead or unreachable code
  ┌─ tests/move_check/typing/constraints_not_satisfied_lvalues_pack_type_args.move:9:25
  │
9 │         B<CupC<R>> {} = abort 0;
  │                         ^^^^^^^ Invalid use of a divergent expression. The code following the evaluation of this expression will be dead and should be removed.

